# DynamicPlugin_cmake

./: CMakeLists.txt  README.md  build.bat
src/BasePluginLib/: CMakeLists.txt  PluginInterface.cpp  PluginInterface.h  PluginRegister.cpp  PluginRegister.h  basepluginlib_global.h
src/DynamicLoad/: CMakeLists.txt  main.cpp
src/MyPlugin/: CMakeLists.txt  MyPlugin.cpp  MyPlugin.h  mypluginlib_global.h
src/PluginManagerLib/: CMakeLists.txt  PluginManagerInstance.cpp  PluginManagerInstance.h  pluginmanagerlib_global.h
